compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_case_wrong_mismatch_discrim_select_ty.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "case 1.0 of label 1, 'd', false end case"
---
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 5..8: mismatched types
| error in file FileId(1) for 5..8: `real` cannot be used as a case discriminant
| info: `case` discriminant must be either an index type (an integer, `boolean`, `char`, enumerated type, or a range), or a `string`
error in file FileId(1) at 21..24: mismatched types
| note in file FileId(1) for 5..8: discriminant is of type `real`
| note in file FileId(1) for 21..24: selector is of type `char`
| error in file FileId(1) for 21..24: `char` is not a `real`
| info: selector type must match discriminant type
error in file FileId(1) at 26..31: mismatched types
| note in file FileId(1) for 5..8: discriminant is of type `real`
| note in file FileId(1) for 26..31: selector is of type `boolean`
| error in file FileId(1) for 26..31: `boolean` is not a `real`
| info: selector type must match discriminant type
