compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_charn_ty_wrong_type_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type _ : char(1.0)"
---
"_"@(FileId(1), 5..6) [Type]: alias[DefId(LibraryId(0), LocalDefId(0))] of char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 14..17: mismatched types
| note in file FileId(1) for 14..17: this is of type `real`
| info: `real` is not an integer type
