compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_charn_ty_wrong_value_size.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "type k : int type _ : char(k)"

---
"k"@(FileId(1), 5..6) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(0))] of int
"_"@(FileId(1), 18..19) [Resolved(Type)]: alias[DefId(LibraryId(0), LocalDefId(1))] of char_n Fixed(Unevaluated(LibraryId(0), BodyId(0)))
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 27..28: cannot use `k` as an expression
| error in file FileId(1) for 27..28: `k` is a reference to a type, not a variable
| note in file FileId(1) for 5..6: `k` declared here
