compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_const_compatible.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "const k : int := 100"

---
ty_nodes:
    Idx::<Type>(0) TyRef(Int(Int))
def_kinds:
    DefId(0) Const(TyRef(Int(Int)))
