compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_const_error_invalid_storage_ty_any_char.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
assertion_line: 42
expression: "const _ : char(*)"

---
"_"@(FileId(1), 6..7) [Declared]: char_n Any
"<root>"@(dummy) [Declared]: <error>

error in file FileId(1) at 10..17: invalid storage type
| error in file FileId(1) for 10..17: cannot use `char(*)` in `const` declarations
| info: `char(*)`'s refer to character sequences that do not have a fixed size known at compile-time
